<resources>
    <string name="app_name">Aplicacion Curso Android 1</string>
    <string name="text_string">Este es una prueba</string>
    <string name="button_message1">Pícale aquí!</string>
    <string name="button_message2">Pícale acá!</string>
    <string name="button_message3">Acá también!</string>

    <string name="saxophone">Saxofón</string>
    <string name="skateboarding">Patineta</string>
    <string name="beer">Cerveza</string>
    <string name="pig">Cerdo</string>

    <string name="lisa">Has elegido a Lisa</string>
    <string name="bart">Has elegido a Bart</string>
    <string name="moe">Has elegido a Moe</string>
    <string name="homer">Has elegido a Homero</string>
    <string name="avenger_frase">Ponga aquí una frase</string>
    <string name="avenger_esta_vivo">¿Está vivo?</string>
    <string name="afirmativo">Sí</string>
    <string name="negativo">No</string>
    <string name="showInfo">Mostrar</string>
    <string name="hasgema">¿Tiene gema?</string>
    <string name="nombreAvenger">Avenger name:</string>
    <string name="edit">End</string>
    <string name="loggin">Loggin</string>
    <string name="user">Usuario</string>
    <string name="settings">Configuración</string>
    <string name="logout">Cerrar sesión</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="name">Nombre</string>
    <string name="address">Dirección</string>
    <string name="end">Finalizar</string>
    <string name="empy_fields">Ingrese todo los campos.</string>
    <string name="empty_name">Nombre en blanco.</string>
    <string name="empty_address">Dirección vacía.</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="empty_input_message">Mensaje de error</string>
    <string name="insert_a_message_to_send">Este es una notificación de prueba</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="zoom">Zoom</string>
    <string name="clockwise">Clockwise</string>
    <string name="fade">Fade</string>
    <string name="blink">Blink</string>
    <string name="move">Move</string>
    <string name="slide">Slide</string>
    <string name="start_job">Start Job</string>
    <string name="stop_job">Stop Job</string>

    <string-array name="country_arrays">
        <item>México🇲🇽</item>
        <item>Malaysia 🇲🇾</item>
        <item>United States 🇺🇸</item>
        <item>Indonesia 🇮🇩</item>
        <item>France 🇫🇷</item>
        <item>Italy 🇮🇹</item>
        <item>Singapore 🇸🇬</item>
        <item>New Zealand 🇳🇿</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="camera">Cámara</string>
    <string name="media">Media</string>

</resources>
