<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".animations.AnimationsActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/androidImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_android" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">
        <Button
            android:id="@+id/buttonZoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GeneralButtonStyle"
            android:text="@string/zoom"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/buttonClockWise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GeneralButtonStyle"
            android:text="@string/clockwise"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/buttonFade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GeneralButtonStyle"
            android:text="@string/fade"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/buttonBlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GeneralButtonStyle"
            android:text="@string/blink"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/buttonMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GeneralButtonStyle"
            android:text="@string/move"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/buttonSlide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GeneralButtonStyle"
            android:text="@string/slide"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>