<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".components.vector.ProfileActivity">

    <item
        android:id="@+id/action_notificacion"
        android:icon="@drawable/ic_menu"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/menuUser"
                android:icon="@drawable/ic_user"
                android:orderInCategory="1"
                android:title="@string/user"/>
            <item android:id="@+id/menuSettings"
                android:icon="@drawable/ic_settings"
                android:orderInCategory="2"
                android:title="@string/settings"/>
            <item android:id="@+id/menuLogout"
                android:icon="@drawable/ic_logout"
                android:orderInCategory="3"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>